; ModuleID = '/home/carl/AnghaBench/linux/drivers/of/extr_property.c_of_graph_get_remote_port_parent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/of/extr_property.c_of_graph_get_remote_port_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.device_node* @of_graph_get_remote_port_parent(%struct.device_node* %0) #0 {
  %2 = alloca %struct.device_node*, align 8
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca %struct.device_node*, align 8
  store %struct.device_node* %0, %struct.device_node** %2, align 8
  %5 = load %struct.device_node*, %struct.device_node** %2, align 8
  %6 = call %struct.device_node* @of_graph_get_remote_endpoint(%struct.device_node* %5)
  store %struct.device_node* %6, %struct.device_node** %3, align 8
  %7 = load %struct.device_node*, %struct.device_node** %3, align 8
  %8 = call %struct.device_node* @of_graph_get_port_parent(%struct.device_node* %7)
  store %struct.device_node* %8, %struct.device_node** %4, align 8
  %9 = load %struct.device_node*, %struct.device_node** %3, align 8
  %10 = call i32 @of_node_put(%struct.device_node* %9)
  %11 = load %struct.device_node*, %struct.device_node** %4, align 8
  ret %struct.device_node* %11
}

declare dso_local %struct.device_node* @of_graph_get_remote_endpoint(%struct.device_node*) #1

declare dso_local %struct.device_node* @of_graph_get_port_parent(%struct.device_node*) #1

declare dso_local i32 @of_node_put(%struct.device_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
